# latte-pr-agent

./: .dockerignore  .env.development  .env.example  .env.production  .env.test  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  TEST_RESULTS.md  alembic.ini  deploy.py  deploy.sh  deploy_tables.py  docker-compose.prod.yml  docker-compose.yml  idea.md  nginx.conf  phase3_check.py  pyproject.toml  requirements.txt  start.py  test_code_samples.py  test_settings_api.py
alembic/: env.py
docs/: frontend-design-final.md  frontend-design-spec.md  frontend-implementation-plan.md  git-commit-analysis-spec.md  implementation-guide.md  knowledge-graph-implementation-plan.md  next-steps-roadmap.md  phase3-cross-service-analysis.md  project-audit-report.md  security-code-review-report.md  theme-system-design.md  week10-feedback-system-spec.md
frontend/: .dockerignore  .env.production  Dockerfile  Dockerfile.dev  README.md  build-test.sh  deploy.sh  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  test-output.css  test_e2e_settings.js  test_settings_page.js
k8s/: celery-worker.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  redis.yaml  secret.yaml  webhook-server.yaml
scripts/: deploy.sh  migrate-add-project-tables.sql
sql/: init.sql
src/: config.py  logging_config.py  main.py  tasks.py
tests/: conftest.py  test_analyze.py  test_ast.py  test_celery.py  test_configs.py  test_context.py  test_cross_service.py  test_e2e_phase2.py  test_engine.py  test_feedback.py  (+21 more)
(+212 files in other folders)
